# python-project-organization

./: .gitignore  README.md  pyproject.toml
bag_of_scripts/: README.md  import_paths.py  shebang.py  some_definition.py  using_the_definition.py
bag_of_scripts/tests/: try_to_import.py
bbh_evolution/: README.md  constants.py  evolution_new.py  evolution_old.py
python_project/: class_definition.py  imports.py  multiply_by.py
scripts/: script_1.py
tests/: test_multiply_by.py
