[tool.poetry]
name = "python-project"
version = "0.1.0"
description = "An example project"
authors = ["jacopok <jacopok@gmail.com>"]
readme = "README.md"
packages = [{include = "python_project"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
