[tool.poetry]
name = "python-project"
version = "0.1.0"
description = "An example project"
authors = ["jacopok <jacopok@gmail.com>"]
readme = "README.md"
packages = [{include = "python_project"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = ">=1.23, <1.24"
scipy = "^1.10.1"
matplotlib = "^3.7.0"
astropy = "^5.2.1"
numba = "^0.56.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
